<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.urgentreminders.activities.RegisterActivity"
    android:background="@drawable/spiral_notebook_green">



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextRegisterEmail"
        android:hint="@string/email_text"
        android:layout_marginTop="190dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextRegisterPassword"
        android:hint="@string/password_text"
        android:layout_below="@+id/editTextRegisterName"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextRegisterConfirmPassword"
        android:hint="@string/password_text"
        android:layout_below="@+id/editTextRegisterPassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button_text"
        android:id="@+id/buttonRegister"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55dp"
        android:layout_alignEnd="@+id/editTextRegisterName"
        android:layout_alignStart="@+id/editTextRegisterName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name_text"
        android:ems="10"
        android:id="@+id/editTextRegisterName"
        android:layout_below="@+id/editTextRegisterEmail"
        android:layout_alignStart="@+id/editTextRegisterEmail" />

</RelativeLayout>
