<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_green_gradient"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/help_welcome"
        android:textColor="@color/caldroid_black"
        android:id="@+id/textViewWelcome" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/caldroid_black"
        android:text="@string/help_description"
        android:id="@+id/textViewDescription" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="@drawable/background_green_gradient"
        android:weightSum="1">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/diary"
            android:id="@+id/imageViewDiary"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/caldroid_black"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/help_diary"
            android:id="@+id/textViewDiary"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/background_green_gradient"
        android:weightSum="1">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@drawable/offline"
            android:id="@+id/imageViewOffline"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/caldroid_black"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/help_offline"
            android:id="@+id/textViewOffline"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="44dp"
    android:background="@drawable/background_green_gradient"
    android:weightSum="1">
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/google_mike"
        android:id="@+id/imageViewMike"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/caldroid_black"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/help_mike"
        android:id="@+id/textViewMike"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/background_green_gradient"
        android:weightSum="1">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/lock"
            android:id="@+id/imageViewLock"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/caldroid_black"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/help_lock"
            android:id="@+id/textViewLock"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_green_gradient"
        android:weightSum="1">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/alarm"
            android:id="@+id/imageViewReminder"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/caldroid_black"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/help_reminders"
            android:id="@+id/textViewReminder"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/background_green_gradient"
    android:weightSum="1">
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/save"
        android:id="@+id/imageViewSave"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/caldroid_black"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/help_save"
        android:id="@+id/textViewSave"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@drawable/background_green_gradient"
        android:weightSum="1">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/calendar"
            android:id="@+id/imageViewCalendar"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/caldroid_black"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/help_calendar"
            android:id="@+id/textViewCalendar"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_green_gradient"
        android:weightSum="1">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/clear"
            android:id="@+id/imageViewDelete"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/caldroid_black"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/help_delete"
            android:id="@+id/textViewDelete"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/background_green_gradient"
        android:weightSum="1">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/menu"
            android:id="@+id/imageViewMenu"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/caldroid_black"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/help_menu"
            android:id="@+id/textViewMenu"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>
